【MOD】修改相应信息。

--- a/theme.toml
+++ b/theme.toml
@@ -3,9 +3,9 @@
 
 name = "rapid"
 license = "MIT"
-licenselink = "https://github.com/coderzh/hugo-theme-rapid/blob/master/LICENSE.md"
+licenselink = "https://github.com/youqu/hugo-rapid-theme/blob/master/LICENSE.md"
 description = ""
-homepage = "http://blog.coderzh.com/"
+homepage = "http://gozkj.com/"
 tags = ["", ""]
 features = ["", ""]
 min_version = 0.14
