--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
-title: "CoderZh Blog"
+title: "有趣的博客"
 languageCode: "zh-CN"
-baseurl: "http://blog.coderzh.com"
+baseurl: "http://gozkj.com"
+copyright: "Copyright (c) 2015-2016. zhaokaiju All rights reserved."
 theme: "hugo-rapid-theme"
-copyright: "Copyright (c) 2015. All rights reserved."
 MetaDataFormat: "yaml"
 canonifyurls: true
 builddrafts: false
@@ -18,12 +18,12 @@ Taxonomies:
   tag: "tags"
   category: "categories"
 params:
-  CopyrightHTML: "Copyright &#xA9; 2015. All Rights Reserved."
+  CopyrightHTML: "Copyright &#xA9; 2015-2016. zhaokaiju All Rights Reserved."
   GitHubUser: "coderzh"
   SidebarRecentLimit: 5
   DateForm : "2006年01月02日"
-  Tagline: "一个程序员的思考与总结"
-  Description: "如果你没有感觉到时间不够用时，你多半正在虚度光阴。"
+  Tagline: "有趣的博客"
+  Description: "高效率，慢生活。"
   Keywords: "独立博客,程序员,思考,读书笔记,技术分享"
   Categories:
     - "读书笔记"
